newclay/test/Compiler/StaticEvaluator/Fail/AliasPatternUnboundParameter2/main.clay
define Foo['A];

alias Bar['B, 'X] = Foo['B];

#foo(Bar['B, 'X]) = 'B;

#Main() = ..foo(Foo[1]);
